# Copyright 2022 Bruce Merry
#
# This program is free software: you can redistribute it and/or modify it
# under the terms of the GNU General Public License as published by the Free
# Software Foundation, either version 3 of the License, or (at your option)
# any later version.
#
# This program is distributed in the hope that it will be useful, but WITHOUT
# ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
# FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for
# more details.
#
# You should have received a copy of the GNU General Public License along
# with this program. If not, see <https://www.gnu.org/licenses/>.

[package]
name = "sunsniff"
version = "0.1.0"
edition = "2021"
authors = ["Bruce Merry"]

[dependencies]
async-std = "1.12.0"
async-trait = "0.1.57"
clap = { version = "4.0.10", features = ["derive"] }
env_logger = "0.9.1"
etherparse = "0.12.0"
futures = "0.3.24"
influxdb2 = { version = "0.3.3", default_features = false, features = ["rustls"] }
log = "0.4.17"
mqtt-async-client = "0.3.1"
pcap = { version = "0.11.0", features = ["capture-stream"] }
phf = { version = "0.11.1", features = ["macros"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
tokio = { version = "1.21.2", features = ["macros"] }
toml = "0.5.9"
